//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package dxos.echo.blob;

message BlobMeta {
  enum State {
    PARTIALLY_PRESENT = 0;
    FULLY_PRESENT = 1;
  }

  /// Hash of blob content.
  bytes id = 1;

  State state = 2;

  /// Length of blob in bytes.
  int32 length = 3;  

  /// Size of chunk in bytes. Must be a power of 2. Default is 4096.
  int32 chunk_size = 4;

  /**
   * Bitfield of present chunks.
   * Every bit represents a chunk.
   * Chunks are indexed from MSB to LSB.
   **/
  // TODO(dmaretskyi): Optional for future compatability: we might want to compress bitfields with RLE encoding.
  optional bytes bitfield = 5;

  optional google.protobuf.Timestamp created = 6;
  optional google.protobuf.Timestamp updated = 7;

  // TODO(dmaretskyi): Path to blob?
}
